# gamestone

./: Dockerfile  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
gamestone/migrations/: 0001_initial.py
identity/: urls.py  views.py
identity/migrations/: 0001_initial.py
static/src/styles/: index.scss
templates/identity/: base.html  temporary_login.html
