[tool.poetry]
name = "gamestone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.6"
whitenoise = "^6.4.0"
requests = "^2.31.0"
django-sendgrid-v5 = "^1.2.2"
django-allauth = "^0.54.0"
dj-database-url = "^2.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
